rollouts-canary/rollout-canary.yaml
##  O objeto Rollout é uma Custom Resource Definition (CRD) que substitui o objeto Deployment nativo do Kubernetes quando precisamos de estratégias avançadas.
## No Rollout, definimos a estratégia (strategy) como canary e referenciamos os dois serviços que acabamos de criar.
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: web-color-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-color
  template:
    metadata:
      labels:
        app: web-color
        version: blue
    spec:
      containers:
      - name: app-container-blue
        # Imagem com a versão blue - green
        image: bernardolankheet/lab-blue-green:green
        ports:
        - containerPort: 80
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
