rollouts-canary/ingress-canary-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-color-preview
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: app-preview.bernardolankheet.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-color-preview
            port:
              number: 80
